--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "eslint-config-next": "13.4.13",
     "next": "13.4.13",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.6.0",
+    "react-youtube": "^10.1.0"
   },
   "devDependencies": {
     "sass": "^1.64.2"
