--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.0",
-    "react-youtube": "^10.1.0"
+    "react-youtube": "^10.1.0",
+    "swiper": "^9.4.1"
   },
   "devDependencies": {
     "sass": "^1.64.2"
