--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "next": "13.4.13",
+    "primereact": "^10.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.0",
+    "react-hook-form": "^7.47.0",
+    "react-phone-input-2": "^2.15.1",
     "react-youtube": "^10.1.0",
     "swiper": "^9.4.1"
   },
