--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-fast-marquee": "^1.6.0",
     "react-hook-form": "^7.47.0",
     "react-phone-input-2": "^2.15.1",
+    "react-select": "^5.7.7",
     "react-youtube": "^10.1.0",
     "swiper": "^9.4.1"
   },
