--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.9.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "next": "13.4.13",
+    "nodemailer": "^6.9.7",
     "primereact": "^10.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -19,6 +21,7 @@
     "react-hook-form": "^7.47.0",
     "react-phone-input-2": "^2.15.1",
     "react-select": "^5.7.7",
+    "react-text-mask": "^5.5.0",
     "react-youtube": "^10.1.0",
     "swiper": "^9.4.1"
   },
