--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "date-fns": "^3.3.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
-    "next": "13.4.13",
+    "next": "^14.1.0",
     "nodemailer": "^6.9.7",
     "primereact": "^10.0.3",
     "react": "18.2.0",
