--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-select": "^5.7.7",
     "react-text-mask": "^5.5.0",
     "react-youtube": "^10.1.0",
+    "sharp": "^0.33.4",
     "swiper": "^9.4.1"
   },
   "devDependencies": {
