--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.9.1",
+    "@tanstack/react-query": "^5.62.2",
     "date-fns": "^3.3.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
@@ -17,6 +18,7 @@
     "next-auth": "^5.0.0-beta.25",
     "next-intl": "^3.17.2",
     "nodemailer": "^6.9.7",
+    "primeicons": "^7.0.0",
     "primereact": "^10.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -25,6 +27,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-select": "^5.7.7",
     "react-text-mask": "^5.5.0",
+    "react-toastify": "^10.0.6",
     "react-youtube": "^10.1.0",
     "sharp": "^0.33.4",
     "swiper": "^9.4.1"
