--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "next": "^14.1.0",
-    "next-auth": "^5.0.0-beta.25",
+    "next-auth": "^4.22.1",
     "next-intl": "^3.17.2",
     "nodemailer": "^6.9.7",
     "primeicons": "^7.0.0",
