--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
     "date-fns": "^3.3.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "lodash.debounce": "^4.0.8",
     "next": "^14.1.0",
     "next-auth": "^4.22.1",
     "next-intl": "^3.17.2",
     "nodemailer": "^6.9.7",
+    "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.0",
     "react-hook-form": "^7.47.0",
+    "react-paginate": "^8.2.0",
     "react-phone-input-2": "^2.15.1",
     "react-select": "^5.7.7",
     "react-text-mask": "^5.5.0",
