--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "primeicons": "^7.0.0",
     "primereact": "^10.8.4",
     "react": "18.2.0",
+    "react-calendar": "^6.0.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.0",
     "react-hook-form": "^7.47.0",
