--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-toastify": "^10.0.6",
     "react-youtube": "^10.1.0",
     "sharp": "^0.33.4",
-    "swiper": "^9.4.1"
+    "swiper": "^9.4.1",
+    "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
     "sass": "^1.64.2"
