--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
-    "sass": "^1.64.2"
+    "@types/node": "^24.7.2",
+    "@types/react": "^19.2.2",
+    "sass": "^1.64.2",
+    "typescript": "^5.9.3"
   }
 }
