--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "typeRoots": ["./types", "./node_modules/@types"],
+    "baseUrl": ".",
     "paths": {
       "@*": ["./*"]
     },
